# sigconverter.io

.github/workflows/: dependency-update.yml
backend/0.7.5/: pyproject.toml
backend/0.7.6/: pyproject.toml
backend/0.7.7/: pyproject.toml
backend/0.7.8/: pyproject.toml
backend/0.7.9/: pyproject.toml
backend/1.0.0/: pyproject.toml
backend/1.0.1/: pyproject.toml
backend/1.0.2/: pyproject.toml
backend/1.0.3/: pyproject.toml
backend/1.0.4/: pyproject.toml
