[project]
name = "sigconverter-backend"
version = "1.0.0"
description = "backend for the sigconverter projects"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Magic Sword", email = "info@magicsword.io" }]
dependencies = [
    "flask>=3.0.3",
    "pysigma-backend-carbonblack>=0.1.8",
    "pysigma-backend-cortexxdr>=0.1.2",
    "pysigma-backend-datadog>=0.1.0",
    "pysigma-backend-elasticsearch>=1.0.10",
    "pysigma-backend-insightidr>=0.2.4",
    "pysigma-backend-loki>=0.10.3",
    "pysigma-backend-opensearch>=1.0.2",
    "pysigma-backend-qradar-aql>=0.3.2",
    "pysigma-backend-sentinelone-pq>=0.1.4",
    "pysigma-backend-sentinelone>=0.1.3",
    "pysigma-backend-splunk>=1.0.3",
    "pysigma-backend-sqlite>=0.1.1",
    "pysigma-backend-uberagent>=0.3.61",
    "pysigma-pipeline-sysmon>=1.0.3",
    "pysigma-pipeline-windows>=1.1.1",
    "setuptools>=75.1.0",
    "sigma-cli==0.7.7",
]
